# python-sdk

./: .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  renovate.json  requirements.txt  setup.cfg
.github/: CONTRIBUTING.md
.github/workflows/: codeql.yml  lint.yml  static-analysis.yml  tests.yml
airplane/: __init__.py  client.py  config.py  display.py  email.py  exceptions.py  execute.py  mongodb.py  output.py  params.py  prompts.py  rest.py  runtime.py  slack.py  sql.py  types.py
airplane/api/: client.py  entities.py
airplane/builtins/: ai.py  email.py  graphql.py  mongodb.py  rest.py  slack.py  sql.py
airplane/config/: config.py  definitions.py  types.py
airplane/runtime/: __init__.py  interface.py  standard.py
airplane_tests/: __init__.py  config.py  display.py  exceptions.py  files.py  output.py  params.py  test_airplane.py
airplane_tests/api/: client.py  entities.py
airplane_tests/builtins/: __init__.py  email.py  graphql.py  mongodb.py  rest.py  slack.py  sql.py
airplane_tests/runtime/: __init__.py  standard.py
examples/: airplane.yaml  main_airplane.py  requirements.txt
tests/airplane/: test_builtins.py  test_config.py  test_display.py  test_exceptions.py  test_output.py  test_params.py  test_prompt.py  test_runtime.py  test_sleep.py
tests/airplane/api/: test_client.py  test_entities.py  test_types.py
tests/airplane/builtins/: test_ai.py  test_builtins.py  test_sql.py
tests/airplane/config/: test_config.py
tests/airplane/runtime/: test_workflow.py
