
[tool.poetry]
name = "airplanesdk"
version = "0.3.2"
description = "A Python SDK for writing Airplane tasks"
authors = ["Airplane <support@airplane.dev>"]
license = "MIT"
repository = "https://github.com/airplanedev/python-sdk"
homepage = "https://airplane.dev"
readme = "README.md"
packages = [
  { include = "airplane" },
]

[tool.poetry.dependencies]
python = "^3.6.2"
requests = "^2.25.1"
backoff = "^1.10.0"
deprecation = "^2.1.0"
typed-ast = "^1.5.4"

[tool.poetry.dev-dependencies]
pre-commit = "2.17.0"
black = "22.3.0"
pylint = "2.13.9"
mypy = "0.960"
types-requests = "^2.27.29"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
